force-app/main/default/objects/Account/fields/Credit_Terms__c.field-meta.xml
<CustomField>
    <fullName>Credit_Terms__c</fullName>
    <label>Credit Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due on Receipt</fullName>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
                <default>true</default>
                <label>Net 30</label>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>