force-app/main/default/objects/Account/fields/Customer_Since_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Since_Date__c</fullName>
    <description>Date that this account became a customer.</description>
    <label>Customer Since Date</label>
    <type>Date</type>
</CustomField>