force-app/main/default/objects/Account/fields/ERP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Customer_Number__c</fullName>
    <description>Customer number from the ERP.</description>
    <label>ERP Customer Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>