force-app/main/default/objects/Account/fields/ERP_Prospect_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Prospect_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Id connecting SF Account to ERP Account.</description>
    <externalId>true</externalId>
    <label>ERP Prospect ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>